cli: make git-pr-create detect backports